bk_ida/gccida/c0/get_file_function_name_long
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_file_function_name_long/src/tree.c:5104:9: error: use of undeclared identifier 'arg0'
name = &arg0; 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_file_function_name_long/src/obj/tree.o] Error 1
